Overflow fixes

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 body {
   background-image: linear-gradient(to top, #755780, #6c5781, #625781, #585681, #4e5680, #4a5886, #44598d, #3c5b93, #395fa3, #3663b3, #3467c4, #336bd4);
+  background-attachment: fixed;
   font-family: "Roboto", sans-serif;
   min-height: 100vh;
   display: flex;
